v2.6.0/traefik-enterprise-dashboard-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-enterprise-dashboard-basicauth
  namespace: traefikee
spec:
  basicAuth:
    secret: traefik-enterprise-dashboard-auth
