v2.6.0/traefik-enterprise-dashboard-igr.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-enterprise-dashboard
  namespace: traefikee
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-enterprise.example.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-enterprise-dashboard-basicauth
