v2.6.0/traefik-enterprise-httpbin-api.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-httpbin
  namespace: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-httpbin
  template:
    metadata:
      labels:
        app: api-httpbin
    spec:
      containers:
        - name: whoami
          image: kennethreitz/httpbin

---
apiVersion: v1
kind: Service
metadata:
  name: api-httpbin
  namespace: httpbin
  labels:
    app: api-httpbin
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: api
  selector:
    app: api-httpbin

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-httpbin-tls
  namespace: httpbin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`httpbin.example.com`)
      services:
        - name: api-httpbin
          port: 80
  tls:
    certResolver: cloudflare
